[tool.poetry]
name = "bettersafethansorry"
version = "0.3.1"
description = "Configurable backup application"
authors = ["Maarten De Munck <maarten@vijfendertig.be>"]
maintainers = ["Maarten De Munck <maarten@vijfendertig.be>"]
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://gitea.home.vijfendertig.be/maarten/bettersafethansorry"
keywords = ["Backup"]

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^6.0"
deepmerge = "^1.1.0"
requests = "^2.28.1"
exif = "^1.5.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bsts = "bettersafethansorry.cli:main"